# object-theater-vla

./: .commit-summary.md  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.sh
configs/: __init__.py  config.py  device.py
envs/: __init__.py  robosuite_sandbox.py
memory/: __init__.py  lemb_core.py
models/: __init__.py  diffusion_policy.py  siglip_grounding.py  v_jepa_encoder.py
scripts/: 01_teleop_demonstrate.py  02_autonomous_rollout.py  03_server_brain.py  03_train_diffusion_policy.py  04_client_body.py  __init__.py
tests/: __init__.py
utils/: __init__.py  dataset.py  dump_files.sh  train.py  visualization.py
