[tool.uv]
index-url = "https://pypi.org/simple"
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
triton-rocm = { index = "pytorch-rocm" }

[project]
name = "object-theater-vla"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
	# Deep Learning Core (AMD ROCm Optimized)
	"torch>=2.11.0",
	"torchvision",
	"triton-rocm",

	# Neural Network Libraries
	"transformers>=4.40.0",
	"accelerate>=0.28.0",
	"diffusers>=0.27.0",
	"sentencepiece>=0.2.1",
	"protobuf>=7.34.1",

	# Memory & Physics
	"faiss-cpu>=1.8.0",
	"robosuite>=1.5.0",
	"h5py>=3.10.0",

	# Math & Core Utilities (Pinned for compatibility)
	"numpy>=1.24.0,<2.0.0",
	"matplotlib>=3.7.0",
	"PyYAML>=6.0",
	"pyzmq>=25.0.0",
	"opencv-python>=4.8.0",

	# Test tools
	"pyright"
]
